# krona

./: .gitignore  .pre-commit-config.yaml  .ruffignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.cursor/rules/: architecture.mdc  maintenance.mdc  uv.mdc
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: master.yml
krona/: main.py
krona/models/: action.py  mapping.py  position.py  suggestion.py  transaction.py
krona/parsers/: avanza.py  base.py  nordnet.py
krona/processor/: action.py  mapper.py  position.py  price.py  resolver.py  transaction.py
krona/processor/strategies/: base.py  conflict_detection.py  fuzzy_match.py  fuzzy_match_position.py
krona/ui/: charts.py  cli.py  demo_modular_textual.py  tui.py  tui_wrapper.py
krona/ui/charts/: __init__.py  base.py  portfolio.py
krona/ui/modules/: base.py
krona/ui/state/: app_state.py
krona/ui/styles/: theme.py  tui.tcss
krona/ui/utils/: chart_cache.py  error_handler.py
krona/ui/views/: __init__.py  dashboard_stats.py  transaction_history.py
krona/utils/: io.py  logger.py
tests/: conftest.py  test_avanza_parser.py  test_integration.py  test_mapper.py  test_nordnet_parser.py  test_position.py  test_resolver.py  test_strategies.py  test_symbol_mapper.py  test_symbol_resolver.py  test_transaction_processor.py  test_ui_components.py
tests/data/: transactions-and-notes-export.csv
